<resources>
    <string name="app_name">CookingApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid login credentials</string>
    <string name="error_used_email">Email already in use</string>
    <string name="error_invalid_password">This password is too short (&lt;6 characters)</string>
    <string name="error_edit_invalid_password">You need to specify a password. Otherwise Changes will not be saved.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_login">Login</string>
    <string name="demo_data_initiated">Demo data initiated</string>
    <string name="reset_msg">Do you really want to reset the database?</string>

    <!-- Actions related to login-->
    <string name="action_register">Register</string>
    <string name="action_demo_data">Reset Demo Data</string>
    <string name="action_reset">Reset</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>


    <!-- Strings related to register -->
    <string name="cook_firstName">First Name</string>
    <string name="cook_name">Last Name</string>
    <string name="cook_repeat_password">Repeat Password</string>
    <string name="cook_created">User created</string>


    <!-- String related to MainActivity -->
    <string name="title_activity_main">Let\'s cook!</string>
    <string name="logout_msg">Do you really want to logout?</string>
    <string name="meals">Meals</string>

    <!-- Base Activity : System Settings -->
    <string name="about_name">ABOUT</string>
    <string name="setting_name">SETTINGS</string>

    <!-- Base Activity : Navigation Settings -->
    <string name="title_activity_home">Home</string>
    <string name="title_activity_myCook">My infos</string>
    <string name="title_activity_myRecipe">My recipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="disclaimer" translatable="false">Copyright &#169; 2017\nHES-SO Valais//Wallis Sierre</string>
    <string name="impressum" translatable="false">644-1 Mobile &amp; Cloud Computing</string>

    <!-- Actions related to MainActivity -->
    <string name="action_breakfast">Pour le matin</string>
    <string name="action_lunch">Pour le midi</string>
    <string name="action_dinner">Pour le soir</string>
    <string name="action_newRecipe">Créer une nouvelle recette</string>

    <!-- String related to Recipes -->
    <string name="title_activity_recipes">Recettes</string>
    <string name="title_activity_cooks">Cuisiniers</string>
    <string name="tv_firstName">First Name</string>
    <string name="tv_lastName">Last Name</string>
    <string name="tv_mail">\@mail</string>
    <string name="tv_phone">Phone Number</string>
    <string name="action_submit">Submit</string>

    <!-- Cook Activity -->
    <string name="cook_updated">Cook updated</string>
    <string name="delete_msg">Do you really want to delete your Cook account?</string>
    <string name="pref_header_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_about_text">This application was developed at the HES-So Sierre in computer science management, as part of the course on the development of mobile applications android. The authors of this application are : Borrajo Elias and Lonfat Milena. Thanks to Yvan Pannatier for his precious help on this project.</string>
    <string name="title_activity_about">About</string>
    <string name="switch_name">Theme</string>
    <string name="prompt_apply_change_password">Enter password to apply change</string>
    <string name="profile_photo">Profile photo</string>

    <!-- String related to activity_main_drawer -->
    <string name="title_activity_mainmenu">Main menu</string>
    <string name="title_activity_myinfos">My Infos</string>
    <string name="title_activity_myrecipes">Recipes</string>

    <!-- String related to activity create recipe -->
    <string name="recipe_created">Recipe created</string>
    <string name="tv_title_create">Create new recipe</string>
    <string name="ib_descritpion">Photo of your meal</string>
    <string name="tv_recipe_name">Recipe name</string>
    <string name="et_recipe_name">Name</string>
    <string name="tv_prep_time">Preparation time</string>
    <string name="et_prep_time">Time</string>
    <string name="tv_time">min.</string>

    <string name="tv_meal">Meal</string>
    <string name="cb_breakfast">Breakfast</string>
    <string name="cb_lunch">Lunch</string>
    <string name="cb_dinner">Dinner</string>

    <string name="tv_diet">Diet</string>
    <string name="cb_vegan">Vegan</string>
    <string name="cb_vegetarian">Vegetarian</string>
    <string name="cb_meat">Meat</string>
    <string name="cb_fish">Fish</string>

    <string name="tv_allergy">Allergy</string>
    <string name="cb_lactose">Lactose</string>
    <string name="cb_gluten">Gluten</string>
    <string name="cb_nuts">Nuts</string>
    <string name="cb_peanuts">Peanut</string>

    <string name="tv_ingredients">Ingredients</string>
    <string name="tv_preparation">Preparation</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="error_empty_recipe_name">Please, give a name to your recipe</string>
    <string name="error_empty_ingredient">Please provide ingredients</string>
    <string name="error_empty_preparation">Please, give indications of preparation</string>
    <string name="error_empty_meal_time">Please, chosse a type of meal</string>

    <!-- String related to activity_recipe_detail -->
    <string name="tv_title_recipe">Recipe name</string>
    <string name="btn_edit">Edit</string>
    <string name="error_invalid_phone">The phone number is not valid</string>
    <string name="error_invalid_email_format">Email format is incorrect, please try again. Otherwise the changes will not be saved.</string>
    <string name="error_invalid_phone_format">Phone number format is incorrect, phone number should contain between 10-13 numbers, please try again. Otherwise the changes will not be saved.</string>
    <string name="action_allCooks">All cooks</string>
    <string name="selectedCook">cookListSelected</string>
    <string name="action_MyProfile">action_MyProfile</string>
    <string name="tv_time_preparation">No time</string>
    <string name="delete_recipe_msg">Do you really want to delete this recipe?</string>
    <string name="recipe_updated">Recipe updated</string>
    <string name="clickSourceMyProfile">actionSourceClick_MyProfile</string>
    <string name="recipe_deleted">Recipe deleted</string>
    <string name="tv_message_noSpecCook">No creator specified</string>
    <string name="MessageSaveChanges">Your changes wont be apply, some fields are wrong</string>
    <string name="tv_newPassword">To change password</string>
    <string name="hint_newPassword">Enter new password here</string>
    <string name="toast_newPass">New password not valid. has to be a minimum of 6 characters long.</string>
</resources>