<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_main"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBreakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_breakfast"/>

        <Button
            android:id="@+id/buttonLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_lunch"/>

        <Button
            android:id="@+id/buttonDinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_dinner"/>

        <Button
            android:id="@+id/buttonNewRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_newRecipe"/>

    </LinearLayout>

</LinearLayout>