<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipe.RecipeCreateActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_createRecipe_TitleCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_title_create"
            android:textAlignment="center"
            android:textSize="25sp"/>

        <ImageButton
            android:id="@+id/btn_image_recipe"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_margin="20dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/ib_descritpion"
            android:onClick="onClickedImage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_createRecipe_RecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tv_recipe_name"

                android:textSize="16sp"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="13dp" />

            <EditText
                android:id="@+id/et_createRecipe_RecipeName"
                android:layout_width="249dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/et_recipe_name"
                tools:layout_editor_absoluteX="185dp"
                tools:layout_editor_absoluteY="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_createRecipe_PrepTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tv_prep_time"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="13dp" />

            <EditText
                android:id="@+id/et_createRecipe_PrepTime"
                android:layout_width="162dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/et_prep_time"
                tools:layout_editor_absoluteX="185dp"
                tools:layout_editor_absoluteY="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_createRecipe_TitleMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:text="@string/tv_meal"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cb_createRecipe_Breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_breakfast"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="onCheckedMeal" />

            <CheckBox
                android:id="@+id/cb_createRecipe_Lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_lunch"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="onCheckedMeal"/>

            <CheckBox
                android:id="@+id/cb_createRecipe_Dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_dinner"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="onCheckedMeal"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_createRecipe_TitleDiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:text="@string/tv_diet"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_createRecipe_Meat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_meat"
                    android:layout_marginEnd="12dp"
                    android:onClick="onCheckedDiet" />

                <CheckBox
                    android:id="@+id/cb_createRecipe_Fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_fish"
                    android:onClick="onCheckedDiet" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_createRecipe_Vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_vegetarian"
                    android:onClick="onCheckedDiet" />

                <CheckBox
                    android:id="@+id/cb_createRecipe_Vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_vegan"
                    android:onClick="onCheckedDiet"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_createRecipe_TitleAllergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_allergy"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="83dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_createRecipe_Nuts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_nuts"
                    android:onClick="onCheckedAllegry"/>

                <CheckBox
                    android:id="@+id/cb_createRecipe_Peanuts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_peanuts"
                    android:onClick="onCheckedAllegry"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_createRecipe_Lactose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_lactose"
                    android:layout_marginEnd="17dp"
                    android:onClick="onCheckedAllegry"/>

                <CheckBox
                    android:id="@+id/cb_createRecipe_Gluten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cb_gluten"
                    android:onClick="onCheckedAllegry"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_createRecipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tv_ingredients"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_createRecipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tv_ingredients"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_createRecipe_preparation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/tv_preparation"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_createRecipe_preparation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tv_preparation"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_createRecipe_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/bn_createRecipe_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>